--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,4 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-[x-cloak] { display: none !important; }
+[x-cloak] {
+    display: none !important;
+}
+
+input,
+textarea {
+    @apply focus:outline-gray-300;
+}
